<resources>
    <string name="app_name">GrowthApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Signup</string>
    <string name="Pleas_wait">Please wait</string>
    <string name="okBtn">Ok</string>
    <string name="missing_info_msg">All field required</string>
    <string name="Incorrect">Incorrect</string>
    <string name="incorrectPassOrID">Incorrect password or ID</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forget password</string>
    <string name="send">Send</string>
    <string name="invalid_phone_msg">Invalid phone number</string>
    <string name="enter_your_phone_number">Enter your email</string>
    <string name="national_id_hint">National ID or Iqama</string>
    <string name="phone_number">Phone number</string>
    <string name="nationalId_msg">incorrect national ID</string>
    <string name="phone_msg">Incorrect phone number</string>
    <string name="passwords_msg">The password and the confirm password must match</string>
    <string name="sign_up">Sign Up</string>
    <string name="growth">Growth</string>
    <string name="email_address_hint">Email Address</string>
    <string name="youre_already_logged_in">you\'re already logged in</string>
    <string name="you_need_to_login">You need to login</string>
    <string name="enter_email_dialog">Please enter your email address</string>
    <string name="enter_password_dialog">Please enter your password</string>
    <string name="enter_email_password_dialog">Please enter your email address and password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="enter_valid_email">please enter a valid email address</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="enter_valid_id">please enter valid national ID or Iqama ID</string>
    <string name="choose">Choose</string>
    <string name="Classes">Classes</string>
    <string name="my_classes">My classes</string>
    <string name="chats">Chats</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="Cancel">Cancel</string>
    <string name="Profile">Profile</string>
    <string name="menu_myInfo">Profile</string>
    <string name="CreateClass">Create class</string>
    <string name="enter_class">Enter Class name</string>
    <string name="title_activity_class_main">ClassMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_students">Students</string>
    <string name="title_notifications">Calendar</string>
    <string name="title_setting">Setting</string>
    <string name="CreateEvent">Create Event</string>
    <string name="add_student">Add Student</string>
    <string name="student_email">Student Email</string>
</resources>
