<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"

        />


    <EditText
        android:id="@+id/forgotPass_edtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="number"
        android:maxLength="10" />

    <TextView
        android:id="@+id/btn_send"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="7dp"
        android:background="#fff"
        android:clickable="true"
        android:text="@string/send"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />


</LinearLayout>